; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_speedtest1.c_groupFinal.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_speedtest1.c_groupFinal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.groupConcat = type { i64, i64* }

@sqlite3_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @groupFinal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @groupFinal(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.groupConcat*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.groupConcat* @sqlite3_aggregate_context(i32* %4, i32 0)
  store %struct.groupConcat* %5, %struct.groupConcat** %3, align 8
  %6 = load %struct.groupConcat*, %struct.groupConcat** %3, align 8
  %7 = icmp ne %struct.groupConcat* %6, null
  br i1 %7, label %8, label %30

8:                                                ; preds = %1
  %9 = load %struct.groupConcat*, %struct.groupConcat** %3, align 8
  %10 = getelementptr inbounds %struct.groupConcat, %struct.groupConcat* %9, i32 0, i32 1
  %11 = load i64*, i64** %10, align 8
  %12 = icmp ne i64* %11, null
  br i1 %12, label %13, label %30

13:                                               ; preds = %8
  %14 = load %struct.groupConcat*, %struct.groupConcat** %3, align 8
  %15 = getelementptr inbounds %struct.groupConcat, %struct.groupConcat* %14, i32 0, i32 1
  %16 = load i64*, i64** %15, align 8
  %17 = load %struct.groupConcat*, %struct.groupConcat** %3, align 8
  %18 = getelementptr inbounds %struct.groupConcat, %struct.groupConcat* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds i64, i64* %16, i64 %19
  store i64 0, i64* %20, align 8
  %21 = load i32*, i32** %2, align 8
  %22 = load %struct.groupConcat*, %struct.groupConcat** %3, align 8
  %23 = getelementptr inbounds %struct.groupConcat, %struct.groupConcat* %22, i32 0, i32 1
  %24 = load i64*, i64** %23, align 8
  %25 = load %struct.groupConcat*, %struct.groupConcat** %3, align 8
  %26 = getelementptr inbounds %struct.groupConcat, %struct.groupConcat* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i32, i32* @sqlite3_free, align 4
  %29 = call i32 @sqlite3_result_text(i32* %21, i64* %24, i64 %27, i32 %28)
  br label %30

30:                                               ; preds = %13, %8, %1
  ret void
}

declare dso_local %struct.groupConcat* @sqlite3_aggregate_context(i32*, i32) #1

declare dso_local i32 @sqlite3_result_text(i32*, i64*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
